# tym

./: .gitattributes  .gitignore  .gitmodules  BPManager.pro  CHANGES.md  CMakeLists.txt  COMPILE.md  Doxyfile  LICENCE.html  README.md  libraryelementview.cpp  libraryview.cpp  libraryview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  searchprovider.cpp  searchprovider.h  settingsdialog.cpp  settingsdialog.h  tym.pro
config/sql/: init-0.1.sql
docs/: CMakeLists.txt  Doxyfile.in
libs/: CMakeLists.txt  libs.pri
resources/: CMakeLists.txt  licencetemplate  resources.qrc
resources/config/: TymUninstall.cmake.in  TymUsefulMacros.cmake
resources/config/sql/: init-0.1.sql
resources/examples/beatport-responses/: multi_id_request.json  multi_results_from_text.json  search_results.json  single_id_request.json
resources/examples/traktor-playlists/: DISCO.nml  Extra.nml  New Prog.m3u  New Prog.nml  all_infos.nml  history_2012y07m14d_12h28m23s.nml
resources/logos/: tym.icns  tym.rc  tym.svgz  tym_logo.ai  tym_logo.eps
resources/translations/: fr_FR.ts  template.ts  tym_en.ts  tym_fr.ts
src/: CMakeLists.txt  bpdatabase.cpp  bpdatabase.h  commons.cpp  commons.h  config.h.in  libraryelementview.h  librarymodel.cpp  librarymodel.h  libraryview.cpp  libraryview.h  main.cpp  patterntool.cpp  patterntool.h  searchprovider.cpp  searchprovider.h  src.pri  version.h.in
src/concretetasks/: CMakeLists.txt  exportplaylisttask.cpp  exportplaylisttask.h  librarystatusupdater.cpp  librarystatusupdater.h  renametask.cpp  renametask.h  renamethread.cpp  renamethread.h  searchtask.cpp  searchtask.h  searchthread.cpp  searchthread.h  task.cpp  task.h
src/dbaccess/: CMakeLists.txt  bpdatabase.cpp  bpdatabase.h  dbaccess.pri  libraryentry.cpp  libraryentry.h  librarymodel.cpp  librarymodel.h  librarymodel.old.cpp  librarymodel.old.h  librarymodel2.cpp  librarymodel2.h  searchresultsmodel.cpp  searchresultsmodel.h
src/gui/: CMakeLists.txt  about.cpp  about.h  about.ui  consolewidget.h  consolewidget.ui  gui.pri  mainwindow.cpp  mainwindow.h  mainwindow.ui  patternbutton.cpp  patternbutton.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  taskmonitor.cpp  taskmonitor.h  taskmonitor.ui  trackinfosview.cpp  trackinfosview.h  trackinfosview.ui
src/interfaces/: genericsingleton.h  taskfactory.h
src/network/: CMakeLists.txt  README.md  network.pri  o1beatport.cpp  o1beatport.h  o1beatport.ui  picturedownloader.cpp  picturedownloader.h  searchprovider.cpp  searchprovider.h
src/tasks/: CMakeLists.txt  task.cpp  task.h  taskmonitor.cpp  taskmonitor.h  taskmonitor.ui
src/tasks/export/: CMakeLists.txt  exportconfigurator.cpp  exportconfigurator.h  exportconfigurator.ui  exportplaylisttask.cpp  exportplaylisttask.h  exporttask.cpp  exporttask.h
src/tasks/libupdater/: CMakeLists.txt  librarystatusupdater.cpp  librarystatusupdater.h
src/tasks/rename/: CMakeLists.txt  renameconfigurator.cpp  renameconfigurator.h  renameconfigurator.ui  renametask.cpp  renametask.h
src/tasks/search/: CMakeLists.txt  searchconfigurator.cpp  searchconfigurator.h  searchconfigurator.ui  searchtask.cpp  searchtask.h
src/tools/: CMakeLists.txt  langmanager.cpp  langmanager.h  patternelement.cpp  patternelement.h  patterntool.cpp  patterntool.h  picturedownloader.cpp  picturedownloader.h  searchprovider.cpp  searchprovider.h  utils.cpp  utils.h  widgetchangesobserver.cpp  widgetchangesobserver.h
src/widgets/: CMakeLists.txt  consolewidget.h  consolewidget.ui  patternbutton.cpp  patternbutton.h  trackinfosview.cpp  trackinfosview.h  trackinfosview.ui
src/wizards/: CMakeLists.txt  exportplaylistwizard.cpp  exportplaylistwizard.h  exportplaylistwizard.ui  renamewizard.cpp  renamewizard.h  renamewizard.ui  searchwizard.cpp  searchwizard.h  searchwizard.ui  wizards.pri
tests/: CMakeLists.txt  testutils.cpp  testutils.h
translations/: CMakeLists.txt  tym_en.ts  tym_fr.ts
uis/: about.ui  libraryelementview.cpp  libraryelementview.h  libraryelementview.ui  libraryview.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchwizard.cpp  searchwizard.h  selectsearchsource.cpp  selectsearchsource.h  selectsearchsource.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  trackinfosview.cpp  trackinfosview.h  trackinfosview.ui  uis.pri
